--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="idleTitle"> Servers are undergoing maintenance. </div>
         <div class="idleSubtitle"> Servers are being worked on right now, we'll be back soon! </div>
         <div class="idleCode"> u+02 </div>
-        <button class="idleRefresh"> Refresh Connection </button>
+        <button class="idleRefresh" onclick="window.location.reload();"> Refresh Connection </button>
     </div>
 </body>
 
