--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 <body>
     <div id="idleScreen">
+        <img src="/src/img/icon_out.png" class="iconOutlined">
         <div id="idleHolder">
             <div class="idleTitle"> Servers/Game are undergoing maintenance. </div>
             <div class="idleSubtitle"> Servers are being worked on right now, we'll be back soon! </div>
@@ -31,13 +32,13 @@
             <button class="idleRefresh" onclick="window.location.reload();"> Refresh Connection </button>
             <div class="socialsContainer">
                 <a href="https://twitter.com/enzenra" class="socialItem">
-                    <img src="/src/img/icon_01.png" alt="" class="socialImg">
+                    <img src="/src/img/icon_01.png" class="socialImg">
                 </a>
                 <a href="https://twitch.tv/decodejs" class="socialItem">
-                    <img src="/src/img/icon_02.png" alt="" class="socialImg">
+                    <img src="/src/img/icon_02.png" class="socialImg">
                 </a>
                 <a href="https://www.youtube.com/channel/UCBHkCLZ5cgBb8FGqO9-5rdA" class="socialItem">
-                    <img src="/src/img/icon_03.png" alt="" class="socialImg">
+                    <img src="/src/img/icon_03.png" class="socialImg">
                 </a>
             </div>
         </div>
