--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta content="https://yannmatrix.github.io/img/icon.png" property="og:image">
     <title> RED ODYSSEY </title>
     <script src="src/script/index.js" defer></script>
+    <script src="src/script/worker.js" defer></script>
     <link rel="manifest" href="manifest.json">
     <link rel="shortcut icon" href="/src/img/icon.png" type="image/x-icon">
     <link rel="apple-touch-icon" href="/src/img/icon.png" type="image/x-icon">
