Changed Link to Start on First Slide

--- a/public/spanish.html
+++ b/public/spanish.html
@@ -1,6 +1,6 @@
 <head>
     <title> Spanish to </title>
-    <meta http-equiv="Refresh" content="0; url='https://docs.google.com/presentation/d/1Ge7OCHdwPS89VGpmfQipQ6ox2xbqFPGSuQrm0FTrcok/edit#slide=id.g119469aa336_0_0'" />
+    <meta http-equiv="Refresh" content="0; url='https://docs.google.com/presentation/d/1Ge7OCHdwPS89VGpmfQipQ6ox2xbqFPGSuQrm0FTrcok/edit#slide=id.g110d8b02b1f_0_69'" />
     <link rel="stylesheet" href="/css/font.css">
 
     <style>
