--- a/game.html
+++ b/game.html
@@ -9,35 +9,30 @@
     <meta name="description" content="Welcome to the Red Odyssey.">
     <meta content="RED ODYSSEY" property="og:title">
     <meta content="..." property="og:description">
-    <meta content="https://yannmatrixdev.github.io" property="og:url">
-    <meta content="https://yannmatrixdev.github.io/img/icon.png" property="og:image">
+    <meta content="https://yannmatrix.github.io" property="og:url">
+    <meta content="https://yannmatrix.github.io/img/icon.png" property="og:image">
     <title> RED ODYSSEY </title>
-    <script src="src/script/worker.js" defer></script>
-    <script src="src/script/loader.js" defer></script>
-    <link rel="manifest" href="manifest.json">
+    <script src="src/script/game.js" defer></script>
     <link rel="shortcut icon" href="/src/img/icon.png" type="image/x-icon">
     <link rel="apple-touch-icon" href="/src/img/icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="src/css/main.css">
-    <link rel="stylesheet" href="src/css/web.css">
+    <link rel="stylesheet" href="src/css/game.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
 </head>
 
 <body>
-    <div id="loader" class="active">
-        <div class="lds-ripple">
-            <div></div>
-            <div></div>
-        </div>
-        <div class="loaderText"> Cleaning up... </div>
+    <div id="startup">
+        <video id="startupVideo" autoplay>
+            <source src="/src/img/startup_0.mp4" type="video/mp4">
+        </video>
     </div>
 
-    <div id="navBar">
-        <a href="/login.html" class="loginLink signedOut">
-            <button class="loginButton signedOut"> Login </button>
-        </a>
+    <div id="mainMenu" class="onMenu startMenu">
+        <audio id="mainAudio" src="/src/audio/song_0.mp3"></audio>
+
+        <div id="backgroundImageHolder" class="mainMenu">
+            <img src="/src/img/01.png" id="backgroundImage">
+        </div>
     </div>
 </body>
-
-</html>
